[gd_scene load_steps=15 format=2]

[ext_resource path="res://Settings_Scene.gd" type="Script" id=1]
[ext_resource path="res://assets/BG2.png" type="Texture" id=2]
[ext_resource path="res://assets/Quicksand-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Nunito-Light.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_color = Color( 0.337255, 0.407843, 0.576471, 1 )
extra_spacing_char = 15
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="DynamicFont" id=4]
size = 36
outline_color = Color( 0.38092, 0.451062, 0.617188, 1 )
extra_spacing_char = 14
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -19.9405
margin_top = -49.9379
margin_right = 1060.07
margin_bottom = 670.062
texture = ExtResource( 2 )

[node name="ModeLabel" type="Label" parent="."]
margin_left = 370.223
margin_top = 53.5443
margin_right = 619.223
margin_bottom = 152.544
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.721569, 0.631373, 1, 1 )
text = "MODE"

[node name="PvPModeButton" type="ToolButton" parent="ModeLabel"]
margin_left = 8.57364
margin_top = 84.4937
margin_right = 130.574
margin_bottom = 158.494
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "PvP"

[node name="AIModeButton" type="ToolButton" parent="ModeLabel"]
margin_left = 129.895
margin_top = 84.0114
margin_right = 278.895
margin_bottom = 158.011
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "AI"

[node name="SimulationModeButton" type="ToolButton" parent="ModeLabel"]
margin_left = -79.4862
margin_top = 133.26
margin_right = 346.514
margin_bottom = 207.26
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "SIMULATION"

[node name="PlayersLabel" type="Label" parent="."]
margin_left = 305.926
margin_top = 296.003
margin_right = 705.927
margin_bottom = 395.003
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.721741, 0.632813, 1, 1 )
text = "PLAYERS"

[node name="2PlayersButton" type="ToolButton" parent="PlayersLabel"]
margin_left = 36.8912
margin_top = 85.5988
margin_right = 129.891
margin_bottom = 159.599
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "2"

[node name="3PlayersButton" type="ToolButton" parent="PlayersLabel"]
margin_left = 141.531
margin_top = 85.1638
margin_right = 234.531
margin_bottom = 159.164
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "3"

[node name="4PlayersButton" type="ToolButton" parent="PlayersLabel"]
margin_left = 244.09
margin_top = 85.4288
margin_right = 337.09
margin_bottom = 159.429
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "4"

[node name="SaveSettingsButton" type="ToolButton" parent="."]
margin_left = 419.68
margin_top = 455.378
margin_right = 566.68
margin_bottom = 529.378
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "SAVE"

[node name="BackButton" type="ToolButton" parent="."]
margin_left = 282.422
margin_top = 511.546
margin_right = 708.422
margin_bottom = 585.546
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "BACK"

[connection signal="pressed" from="ModeLabel/PvPModeButton" to="." method="_on_PvPModeButton_pressed"]
[connection signal="pressed" from="ModeLabel/AIModeButton" to="." method="_on_AIModeButton_pressed"]
[connection signal="pressed" from="ModeLabel/SimulationModeButton" to="." method="_on_SimulationModeButton_pressed"]
[connection signal="pressed" from="PlayersLabel/2PlayersButton" to="." method="_on_2PlayersButton_pressed"]
[connection signal="pressed" from="PlayersLabel/3PlayersButton" to="." method="_on_3PlayersButton_pressed"]
[connection signal="pressed" from="PlayersLabel/4PlayersButton" to="." method="_on_4PlayersButton_pressed"]
[connection signal="pressed" from="SaveSettingsButton" to="." method="_on_SaveSettingsButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
